src/test/deca/syntax/valid/notYetImplemented/test_parser_method.deca
// Description:
//    Minimalistic program to test a method in a class.
//
// Results:
//    None
//
// History:
//    Created on 13/1/2025

class Car {
    void afficher(int limite){
        print(limite);
    }
}
